@@ -111,5 +111,5 @@ rocket=How to launch a rocket and why it is a viable strategy:\n1. You start wit
 gameStart=Game start:\nA map is generated, then cloned to be identical for both teams. It takes time. The main playable area is 1000x1000 with additional area for nest placement around it. The map is charted at the start to remove the element of luck.\nEach team has a constant 100x100 starting area. It is identical for every game and for each team and its border is marked with a black line. At the center there is a [img=item.rocket-silo].\nOn the north of the silo there is (from left to right):\n- [img=item.offshore-pump] - it produces water like normal [img=item.offshore-pump] places in the water\n- [img=item.coal] chest and loader (0.25 belt)\nOn the south of the silo there is:\n- [img=item.iron-plate] chest and belt (1 belt)\n- [img=item.iron-plate] chest and belt (1 belt)\n- [img=item.copper-plate] chest and belt (1 belt)\n- [img=item.stone] chest and loader (0.5 belt)\nThe chests are filled once the game starts. If you don't consume enough the chest will accumulate for later use. You can also take from the chest directly. The filling rate decreases linearly from the start to 60th minute of the game. After 60th minute there are no more free resources.\nJust south of the starting area there is a starter pack chest. Before the start of the game you can (or rather must if you want to be competitive) place a blueprint which will be converted using the elements from this chest at the start of the game. You can design this blueprint in training mode (tournament mode disabled in mod settings).\nIn tournament mode once the game starts all your blueprints (and ghosts that could not be replaced due to lack of material in the chest or due to being outside of the starting area) will be removed. The same goes for quickbar slots and inventory. Blueprint library will also be disabled.\nItems that are unused by the starting blueprint remain in the chest and can be picked up after the start of the game.\nThe resources on the map are poor so that the games don't last too long and you can't camp near the starting area.
 starterPack=The starter pack is located on the south of the starting area, just outside it. Items from it can be used in starting blueprint, the remaining items can be picked up after the game starts.\nThe content of the starter pack is:\n- [img=item.transport-belt] 500\n- [img=item.inserter] 200\n- [img=item.assembling-machine-1] 50\n- [img=item.lab] 10\n- [img=item.pipe] 20\n- [img=item.pipe-to-ground] 4\n- [img=item.steam-engine] 10\n- [img=item.boiler] 5\n- [img=item.small-electric-pole] 200\n- [img=item.underground-belt] 20\n- [img=item.splitter] 10\n- [img=item.burner-inserter] 5\n- [img=item.iron-chest] 30\n- [img=item.long-handed-inserter] 30\n- [img=item.iron-plate] 600\n- [img=item.electronic-circuit] 300\n- [img=item.iron-gear-wheel] 300\n- [img=item.copper-plate] 300\n- [img=item.wood] 100\n- [img=item.electric-mining-drill] 50
 enemies=Each enemy needs to be researched, the research cost is 100 science, the research speed is 30s per science pack.\nTier 1 biters need only one sciece pack ([img=item.automation-science-pack]), tier 2 need 2 ([img=item.automation-science-pack] and [img=item.logistic-science-pack]), etc.\nUpgrades for biters need one more science pack than the research.\nThe order of the science packs is: [img=item.automation-science-pack] [img=item.logistic-science-pack] [img=item.military-science-pack] [img=item.chemical-science-pack] and [img=item.production-science-pack].\nAvailable enemies are:\n- Small biter (tier 1), nest costs 100[img=item.iron-plate] and 50[img=item.copper-plate], upgrade is adrenaline which makes them move twice as fast and attack almost twice as fast\n- Small spitter (tier 1), nest costs 45[img=item.iron-plate] and 90[img=item.copper-plate], upgrade is alcohol - 4/5 of small spitters aim exactly at the target (not at the predicted location of the target) and have 15 range (2 more than normal small spitter)\n - Medium biter (tier 2), nest costs 75[img=item.steel-plate] and 37[img=item.electronic-circuit], upgrade is resistance which increases its resistances to:\n      physical: 6/30%\n      explosion: 4/30%\n      poison: 95%\n      fire: 30%\n      laser: 5/30%\n      electric: 30%\n      impact: 4/30%\n- Medium spitter (tier 2), nest costs 35[img=item.steel-plate] and 40[img=item.electronic-circuit], upgrade is heavy spit which doubles its damage\n- Big biter (tier 3), nest costs 50[img=item.engine-unit] and 50[img=item.plastic-bar], upgrade is sharp teeth which doubles its damage\n- Big spitter (tier 3), nest costs 25[img=item.engine-unit] and 25[img=item.plastic-bar], upgrade is artillery which increases its max range to 40, min range 20, and attack cooldown to 5 seconds\n- Behemoth biter (tier 4), nest costs 25[img=item.flying-robot-frame] and 25[img=item.advanced-circuit], upgrade is rapid regeneration which increases its health regeneration to 300 per second\n- Behemoth spitter (tier 4), nest costs 13[img=item.flying-robot-frame] and 13[img=item.advanced-circuit], upgrade is AoE spit which increases its attack radius to 12
-balance=Balance changes:\n- All ammo magazine size 10 -> 20\n- Yellow ammo damage: 5 -> 4\n- Red ammo damage: 8 -> 9\n- Gun Turret shooting speed 10/s -> 6/s\n- Grenade blast radius 6.5 -> 5\n- Flamethrower overall damage reduced by around 8/9\n- Flamethrower fuel consumption increased 7.5x\n- Flamethrower ammo type bonus for heavy oil: 10% -> 50%, for light oil: 20% -> 100%\n- Laser turret range: 50 (!!!)\n- Rocket requires only 10 parts\n- Poison capsule duration 25s -> 10s\n- Slowdown capsule duration 30s -> 10\n- Upgrades are generally twice as good.\n- Ammo damage upgrades cost increased by 25%\n- Shooting speed upgrades generally grant extra 20% compared to damage. \n- Steelaxe mining speed bonus doubled, additionally gives 20% handcrafting speed.\n- Tollbelt extra slots 10 -> 40, gives 40% handcrafting speed bonus.\n- Mining productivity upgrade bonus 10% -> 30%, mining productivity 1 requires only automation 2.
+balance=Balance changes:\n- All ammo magazine size 10 -> 20\n- Yellow ammo damage: 5 -> 4\n- Red ammo damage: 8 -> 9\n- Gun Turret shooting speed 10/s -> 6/s\n- Grenade blast radius 6.5 -> 5\n- Flamethrower overall damage reduced by around 90%\n- Flamethrower fuel consumption increased 7.5x\n- Flamethrower ammo type bonus for heavy oil: 10% -> 50%, for light oil: 20% -> 100%\n- Laser turret range: 50 (!!!)\n- Rocket requires only 10 parts\n- Poison capsule duration 25s -> 10s\n- Slowdown capsule duration 30s -> 10\n- Upgrades are generally twice as good.\n- Ammo damage upgrades cost increased by 25%\n- Shooting speed upgrades generally grant extra 20% compared to damage. \n- Steelaxe mining speed bonus doubled, additionally gives 20% handcrafting speed.\n- Tollbelt extra slots 10 -> 40, gives 40% handcrafting speed bonus.\n- Mining productivity upgrade bonus 10% -> 30%, mining productivity 1 requires only automation 2.
 insights=Insigths window provides additional info about both teams. It does not refresh automatically, only on topics change or statistics period change. Currently provided views are:\n- Research: provides the list of all researched technologies, including time when each research was completed.\n- Production: List of key items production per time window.\n- Consumption: List of key items consumption (including killed entities like walls) per time window.\n- Item Flow: List of key items difference over time window (production - consumption) per time window.
